Закончил второй урок

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <p class="service-text">Посуточная аренда квартир и домов: большой выбор вариантов для поездок по России</p>
       </div>
       <!-- service -->
-      <hr color="#E5E5E5">
+      <hr class="hr-line" color="#E5E5E5">
       <footer class="footer">
         <p class="footer-text">© ООО «Абито», 2011–2021</p>
         <ul class="footer-menu">
@@ -267,6 +267,18 @@
           </li>
 
         </ul>
+        <ul class="footer-menu">
+          <li class="footer-menu-item">
+            <a href="#" class="footer-link">Реклама на сайте</a>
+          </li>
+          <li class="footer-menu-item">
+            <a href="#" class="footer-link">Вакансии</a>
+          </li>
+          <li class="footer-menu-item">
+            <a href="#" class="footer-link">Помощь</a>
+          </li>
+        </ul>
+
       </footer>
     </aside>
   </div>
